# sensors-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  local.env  manage.py  otel-collector-config.yaml  pyproject.toml
deployments/entrypoints/: sensors-api.sh  sensors-simulator.sh
sensors_api/: __init__.py  __main__.py  dependencies.py  exceptions.py  helpers.py  schemas.py
sensors_api/api/: __init__.py
sensors_api/api/v1/: __init__.py  accounts.py  auth.py  devices.py  records.py
sensors_api/core/: accounts.py  auth.py  devices.py  records.py
sensors_api/db/: connection.py
sensors_api/db/models/: account.py  base_model.py  device.py  record.py
sensors_api/routers/: v1.py
sensors_api/schemas/: accounts.py  auth.py  base_schema.py  devices.py  records.py
sensors_api/scripts/: credentials.py
sensors_simulator/: __main__.py  core.py  exceptions.py  models.py
shared/: enums.py  helpers.py
simulator/: test_simulator.py
tests/unit_tests/: conftest.py  test_api_v1_devices.py  test_api_v1_records.py
